--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   # unit tests
   tests:
     name: "Unit tests"
-    runs-on: ubuntu-latest
+    runs-on: blacksmith
     steps:
       - uses: actions/checkout@v1
       - run: npm ci
@@ -19,7 +19,7 @@ jobs:
   # Failing tests on purpose
   failing-tests:
     name: "Failing tests (on purpose)"
-    runs-on: ubuntu-latest
+    runs-on: blacksmith
     continue-on-error: true
     steps:
       - uses: actions/checkout@v1
